# agent-client-protocol

./: .gitignore  .release-plz.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  README.md  clippy.toml  deny.toml  package-lock.json  package.json  typos.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: 10_accepted_protocol_changes.yml  config.yml
.github/workflows/: ci.yml  deny.yml  publish-schema.yml  publish.yml  release-plz.yml  sync-registry.yml
agent-client-protocol-schema/: Cargo.toml
agent-client-protocol-schema/src/: lib.rs  rpc.rs  serde_util.rs  version.rs
agent-client-protocol-schema/src/v1/: agent.rs  client.rs  content.rs  elicitation.rs  error.rs  mcp.rs  mod.rs  nes.rs  plan.rs  protocol_level.rs  tool_call.rs
agent-client-protocol-schema/src/v2/: agent.rs  client.rs  content.rs  conversion.rs  elicitation.rs  error.rs  mcp.rs  mod.rs  nes.rs  plan.rs  protocol_level.rs  schema_util.rs  terminal.rs  tool_call.rs
docs/: brand.mdx  docs.json  publications.mdx  updates.mdx
docs/announcements/: acp-agent-registry-stabilized.mdx  acp-v2-draft.mdx  additional-directories-stabilized.mdx  boolean-config-option-stabilized.mdx  implementation-information.mdx  logout-method-stabilized.mdx  message-id-stabilized.mdx  model-config-category-stabilized.mdx  request-cancellation-stabilized.mdx  sdk-1-0-releases.mdx  sergey-ignatov-lead-maintainer.mdx  session-close-stabilized.mdx  session-config-options-stabilized.mdx  session-delete-stabilized.mdx  session-info-update-stabilized.mdx  session-list-stabilized.mdx  session-resume-stabilized.mdx  session-usage-stabilized.mdx  transports-working-group.mdx
docs/community/: governance.mdx
docs/get-started/: agents.mdx  clients.mdx  registry.mdx
docs/libraries/: community.mdx  kotlin.mdx  rust.mdx  typescript.mdx
docs/overview/: agents.mdx  clients.mdx  introduction.mdx
docs/protocol/: initialization.mdx  schema.mdx  schema.unstable.mdx  session-setup.mdx
docs/protocol/draft/: agent-plan.mdx  file-system.mdx  schema-v2.mdx  schema.mdx  session-config-options.mdx  session-list.mdx  session-setup.mdx
docs/protocol/v1/: agent-plan.mdx  authentication.mdx  cancellation.mdx  content.mdx  file-system.mdx  initialization.mdx  overview.mdx  prompt-turn.mdx  schema.mdx  session-config-options.mdx  session-delete.mdx  session-list.mdx  session-modes.mdx  session-setup.mdx  slash-commands.mdx  terminals.mdx  tool-calls.mdx
docs/protocol/v1/draft/: agent-plan.mdx  authentication.mdx  cancellation.mdx  content.mdx  file-system.mdx  initialization.mdx  overview.mdx  prompt-turn.mdx  schema.mdx  session-config-options.mdx  session-delete.mdx  session-list.mdx  session-modes.mdx  session-setup.mdx  slash-commands.mdx  terminals.mdx  tool-calls.mdx
docs/protocol/v2/: agent-plan.mdx  authentication.mdx  cancellation.mdx  content.mdx  extensibility.mdx  file-system.mdx  initialization.mdx  migration.mdx  overview.mdx  prompt-lifecycle.mdx  prompt-turn.mdx  schema.mdx  session-config-options.mdx  session-delete.mdx  session-list.mdx  session-setup.mdx  slash-commands.mdx  terminals.mdx  tool-calls.mdx  transports.mdx
docs/protocol/v2/draft/: agent-plan.mdx  authentication.mdx  cancellation.mdx  content.mdx  extensibility.mdx  file-system.mdx  initialization.mdx  overview.mdx  prompt-lifecycle.mdx  prompt-turn.mdx  schema.mdx  session-config-options.mdx  session-delete.mdx  session-list.mdx  session-setup.mdx  slash-commands.mdx  terminals.mdx  tool-calls.mdx  transports.mdx
docs/registry/: _agents.mdx  index.mdx
docs/rfds/: TEMPLATE.md  TEMPLATE.mdx  about.mdx  acp-agent-registry.mdx  additional-directories.mdx  auth-methods.mdx  boolean-config-option.mdx  custom-llm-endpoint.mdx  diff-delete.mdx  elicitation.mdx  end-turn-token-usage.mdx  get-auth-state.mdx  introduce-rfd-process.mdx  mcp-over-acp.mdx  message-id.mdx  meta-propagation.mdx  model-config-category.mdx  next-edit-suggestions.mdx  plan-operations.mdx  proxy-chains.mdx  request-cancellation.mdx  rust-sdk-v1.mdx  session-close.mdx  session-config-options.mdx  session-delete.mdx  session-fork.mdx  session-info-update.mdx  session-list.mdx  session-resume.mdx  session-usage.mdx  sessions-list-api.mdx  streamable-http-websocket-transport.mdx  tool-call-name.mdx  updates.mdx  v2-prompt.mdx
docs/rfds/v2/: client-filesystem-terminal-capabilities.mdx  diff-file-states.mdx  enum-variant-extension.mdx  message-updates.mdx  overview.mdx  permission-requests.mdx  plan-variants.mdx  prompt.mdx  required-session-methods.mdx  session-resume-replay.mdx  terminal-output.mdx  tool-call-updates.mdx
docs/snippets/: author.jsx
rust/: acp.rs  agent.rs  client.rs  content.rs  error.rs  ext.rs  plan.rs  rpc.rs  stream_broadcast.rs  tool_call.rs  version.rs
rust/sdk/: agent.rs  client.rs  mod.rs  rpc.rs  rpc_tests.rs  stream_broadcast.rs
schema/: meta.json  meta.unstable.json  meta.v2.unstable.json  schema.json  schema.unstable.json  schema.v2.unstable.json
schema-generator/: Cargo.toml
schema-generator/src/: main.rs
schema/v1/: CHANGELOG.md  Cargo.toml  schema.json  schema.unstable.json
schema/v1/src/: lib.rs
schema/v2/: CHANGELOG.md  Cargo.toml  meta.json  meta.unstable.json  schema.json  schema.unstable.json
schema/v2/src/: lib.rs
scripts/: generate_registry_docs.py
src/: agent.rs  client.rs  content.rs  elicitation.rs  error.rs  lib.rs  nes.rs  plan.rs  protocol_level.rs  rpc.rs  serde_util.rs  tool_call.rs  version.rs
src/v1/: agent.rs  client.rs  content.rs  elicitation.rs  mcp.rs  mod.rs  nes.rs  plan.rs  protocol_level.rs  tool_call.rs
src/v2/: agent.rs  client.rs  content.rs  conversion.rs  elicitation.rs  ext.rs  mcp.rs  mod.rs  nes.rs  plan.rs  schema_util.rs  tool_call.rs
typescript/: README.md  acp.ts  typedoc.json
unstable/: README.md
unstable/docs/protocol/: schema.mdx
