[package]
name = "agent-client-protocol-schema"
authors = ["Zed <hi@zed.dev>"]
version = "0.6.3"
edition = "2024"
license = "Apache-2.0"
description = "A protocol for standardizing communication between code editors and AI coding agents"
repository = "https://github.com/agentclientprotocol/agent-client-protocol"
homepage = "https://github.com/agentclientprotocol/agent-client-protocol"
documentation = "https://docs.rs/agent-client-protocol-schema"
readme = "README.md"
keywords = ["agent", "client", "protocol", "ai", "editor"]
categories = ["development-tools", "api-bindings"]
include = ["/rust/**/*.rs", "/README.md", "/LICENSE", "/Cargo.toml"]

[features]
unstable = ["unstable_session_model"]
unstable_session_model = []

[lib]
path = "rust/acp.rs"
doctest = false

[[bin]]
name = "generate"
path = "rust/bin/generate.rs"

[dependencies]
anyhow = "1"
derive_more = { version = "2.0.1", features = ["from", "display"] }
schemars = { version = "1" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
