[workspace]
default-members = [
    "agent-client-protocol-schema",
    "schema/v1",
    "schema/v2",
    "schema-generator",
]
members = [
    "agent-client-protocol-schema",
    "schema/v1",
    "schema/v2",
    "schema-generator",
]
resolver = "3"

[workspace.dependencies]
agent-client-protocol-schema = { path = "agent-client-protocol-schema", version = "1.4.0" }

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let-underscore = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
cargo = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
pedantic = "warn"
