[package]
name = "agent-client-protocol-json-schema-v1"
version = "1.17.0"
edition = "2024"
license = "Apache-2.0"
description = "Version marker for ACP v1 JSON Schema GitHub releases"
repository = "https://github.com/agentclientprotocol/agent-client-protocol"
readme = "../../README.md"
keywords = ["agent", "client", "protocol", "ai", "editor"]
categories = ["development-tools", "api-bindings"]
include = ["/Cargo.toml", "/CHANGELOG.md", "/src/lib.rs", "/*.json"]

[lints]
workspace = true
