[package]
name = "agent-client-protocol-json-schema-v2"
version = "2.0.0-alpha.1"
edition = "2024"
license = "Apache-2.0"
description = "Version marker for ACP v2 JSON Schema artifacts"
repository = "https://github.com/agentclientprotocol/agent-client-protocol"
readme = "../../README.md"
keywords = ["agent", "client", "protocol", "ai", "editor"]
categories = ["development-tools", "api-bindings"]
include = ["/Cargo.toml", "/CHANGELOG.md", "/src/lib.rs", "/*.json"]

[lints]
workspace = true
